--- a/style.css
+++ b/style.css
@@ -1,221 +1,164 @@
-/* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-/* Estilos de encabezado */
 header {
-    /* width: 100%;
-	left: 0; 
-	top: 0; 
-	position: fixed;  */
-    overflow: hidden;
-    background-color: #333;
-    color: #fff;
+    /* width: 100%; */
     display: flex;
+    padding: 16px 80px;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    background: var(--neutural-black, #151A27);
 }
 
-h1 {
-    margin: 0;
+.img__logo {
+    height: 40px;
+    width: 40px;
 }
 
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.logo__container {
     display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-nav li {
-    margin: 0 10px;
+.logo__text__container {
+    color: var(--neutural-white, #FFF);
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 30px;
+    /* 120% */
+    margin-left: 0.2em;
 }
 
-nav a {
-    color: #fff;
+.menu__container {
+    display: flex;
+    align-items: flex-start;
+    gap: 32px;
+}
+
+.menu__container a {
+    color: var(--neutural-white, #FFF);
+    text-align: right;
+    font-family: 'Plus Jakarta Sans';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+    /* 150% */
     text-decoration: none;
+    transition: transform 0.3s;
 }
 
-/* Estilos de secciones */
-section {
-    padding: 50px;
+.menu__container a:hover {
+    transform: scale(0.9);
+    color: #e8e8e8;
 }
 
-h2 {
-    margin-top: 0;
-}
-
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    margin: 10px 0;
-}
-
-a {
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-/* Estilos de formulario */
-form {
+footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    background: #151A27;
 }
 
-label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-input[type="text"],
-input[type="email"],
-textarea {
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    width: 100%;
-}
-
-input[type="submit"] {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover {
-    background-color: #666;
-}
-
-/* Estilos de pie de página */
-footer {
-    background-color: #eee;
-    text-align: center;
-    padding: 20px;
-}
-
-
-/* slider */
-
-/* Estilos generales */
-.slider {
-    position: relative;
-    overflow: hidden;
-}
-
-.slider-items {
+.copy__container {
     display: flex;
-    transition: transform 0.3s ease-in-out;
+    padding: 24px 4px;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    align-self: stretch;
+    background: #151A27;
 }
 
-.slider-item {
-    flex-shrink: 0;
+.copy__text {
+    color: var(--neutural-grey-2, #5B5C61);
+    font-feature-settings: 'liga' off;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
 }
 
-.slider-item img {
-    width: 100%;
-    height: auto;
-}
-
-.slider-controls {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.slider-control {
-    background-color: transparent;
-    border: none;
-    color: #ffffff;
-    font-size: 24px;
-    margin: 0 10px;
-    cursor: pointer;
-}
-
-/* Estilos específicos para el botón previo */
-.slider-control[data-slide="prev"] {
-    transform: rotate(0deg);
-}
-
-/* Estilos específicos para el botón siguiente */
-.slider-control[data-slide="next"] {
-    transform: rotate(180deg);
-}
-
-/* Estilos de la diapositiva activa */
-.slider-items[data-slide="0"] {
-    transform: translateX(0%);
-}
-
-.slider-items[data-slide="1"] {
-    transform: translateX(-100%);
-}
-
-.slider-items[data-slide="2"] {
-    transform: translateX(-200%);
-}
-
-/* ---------------------- */
-/* CARD */
-
-.card {
+.logo_desc__container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 300px;
-    height: 400px;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    overflow: hidden;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 16px;
 }
 
-.card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-
-.card .info {
-    padding: 20px;
-}
-
-.card h2 {
-    margin-top: 0;
-    font-size: 24px;
-}
-
-.card p {
+.desc__container {
+    width: 415px;
+    color: var(--neutural-grey-1, #A7AAB5);
+    font-feature-settings: 'liga' off;
+    font-family: Poppins;
     font-size: 16px;
-    line-height: 1.5;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
 }
 
-.card a {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #1e90ff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.2s ease-in-out;
+.links__container {
+    display: flex;
+    align-items: flex-start;
+    gap: 5em;
 }
 
-.card a:hover {
-    background-color: #0066cc;
+.content__container {
+    display: flex;
+    padding: 44px 80px 56px 80px;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+    background: var(--neutural-dark, #1D212E);
+}
+
+.links_columns__container {
+    display: flex;
+    flex-direction: column;
+}
+
+.links_columns_header {
+    width: 140px;
+    color: var(--neutural-grey-2, #5B5C61);
+    font-feature-settings: 'liga' off;  
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    margin-bottom: 1em;
+}
+
+.links_columns_content {
+    display: flex;
+    flex-direction: column;
+    color: var(--neutural-grey-1, #A7AAB5);
+    font-feature-settings: 'liga' off;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+
+.links_icons_container{
+    margin-top: 1em;
+}
+.links_icons_container svg{
+    width: 24px;
+    height: 24px;
+    margin: 0.5em;
 }
