--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background: var(--neutural-black, #151A27);
 }
 
 header {
@@ -12,7 +13,7 @@ header {
     padding: 16px 80px;
     justify-content: space-between;
     align-items: center;
-    background: var(--neutural-black, #151A27);
+    /* background: var(--neutural-black, #151A27); */
 }
 
 .img__logo {
@@ -80,7 +81,7 @@ footer {
 }
 
 .copy__text {
-    color: var(--neutural-grey-2, #5B5C61);
+    color: var(--neutural-grey-2, #adadaf);
     font-feature-settings: 'liga' off;
     font-family: Poppins;
     font-size: 16px;
@@ -116,6 +117,10 @@ footer {
     gap: 5em;
 }
 
+footer {
+    width: 100%;
+}
+
 .content__container {
     display: flex;
     padding: 44px 80px 56px 80px;
@@ -133,12 +138,13 @@ footer {
 .links_columns_header {
     width: 140px;
     color: var(--neutural-grey-2, #5B5C61);
-    font-feature-settings: 'liga' off;  
+    font-feature-settings: 'liga' off;
     font-family: Poppins;
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
-    line-height: 24px; /* 150% */
+    line-height: 24px;
+    /* 150% */
     margin-bottom: 1em;
 }
 
@@ -151,14 +157,54 @@ footer {
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 150% */
+    line-height: 24px;
+    /* 150% */
 }
 
-.links_icons_container{
+.links_icons_container {
     margin-top: 1em;
 }
-.links_icons_container svg{
+
+.links_icons_container svg {
     width: 24px;
     height: 24px;
     margin: 0.5em;
+}
+
+.slider {
+    width: 800px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.slide {
+    width: 800px;
+    float: left;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+}
+
+.controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    width: 800px;
+}
+
+.control {
+    margin: 1em;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ccc;
+    cursor: pointer;
+    text-align: center;
+}
+
+.control.active {
+    background-color: #000;
 }
