--- a/style.css
+++ b/style.css
@@ -171,56 +171,23 @@ footer {
     margin: 0.5em;
 }
 
-.slider {
-    width: 800px;
-    margin: 0 auto;
-    overflow: hidden;
+.slider_cont {
+    margin-top: 3vh;
+    margin-bottom: 3vh;
 }
 
-.slide {
-    width: 800px;
-    float: left;
+.swiper {
+    width: 600px;
+    height: 300px;
+    --swiper-navigation-color: #5a5a5a;
 }
 
-.slide img {
+.swiper-slide {
     width: 100%;
     height: 100%;
 }
 
-.controls {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 0 auto;
-    width: 800px;
-}
-
-.control {
-    margin: 1em;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: #ccc;
-    cursor: pointer;
-    text-align: center;
-}
-
-.control.active {
-    background-color: #000;
-}
-
-
-/* HTML: <div class="loader"></div> */
-.loader {
-    width: 60px;
-    aspect-ratio: 4;
-    background: radial-gradient(circle closest-side, #000 90%, #0000) 0/calc(100%/3) 100% space;
-    clip-path: inset(0 100% 0 0);
-    animation: l1 1s steps(4) infinite;
-}
-
-@keyframes l1 {
-    to {
-        clip-path: inset(0 -34% 0 0)
-    }
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
 }
