--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,11 @@ body {
     min-height: 100vh;
     background: var(--neutural-black, #151A27);
 }
-
+section {
+    width: 100%;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+}
 header {
     /* width: 100%; */
     display: flex;
@@ -15,18 +19,15 @@ header {
     align-items: center;
     /* background: var(--neutural-black, #151A27); */
 }
-
 .img__logo {
     height: 40px;
     width: 40px;
 }
-
 .logo__container {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
-
 .logo__text__container {
     color: var(--neutural-white, #FFF);
     text-align: center;
@@ -35,16 +36,13 @@ header {
     font-style: normal;
     font-weight: 700;
     line-height: 30px;
-    /* 120% */
     margin-left: 0.2em;
 }
-
 .menu__container {
     display: flex;
     align-items: flex-start;
     gap: 32px;
 }
-
 .menu__container a {
     color: var(--neutural-white, #FFF);
     text-align: right;
@@ -53,23 +51,19 @@ header {
     font-style: normal;
     font-weight: 600;
     line-height: 24px;
-    /* 150% */
     text-decoration: none;
     transition: transform 0.3s;
 }
-
 .menu__container a:hover {
     transform: scale(0.9);
     color: #e8e8e8;
 }
-
 footer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     background: #151A27;
 }
-
 .copy__container {
     display: flex;
     padding: 24px 4px;
@@ -79,7 +73,6 @@ footer {
     align-self: stretch;
     background: #151A27;
 }
-
 .copy__text {
     color: var(--neutural-grey-2, #adadaf);
     font-feature-settings: 'liga' off;
@@ -88,9 +81,7 @@ footer {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    /* 150% */
 }
-
 .logo_desc__container {
     display: flex;
     flex-direction: column;
@@ -98,7 +89,6 @@ footer {
     align-items: flex-start;
     gap: 16px;
 }
-
 .desc__container {
     width: 415px;
     color: var(--neutural-grey-1, #A7AAB5);
@@ -108,19 +98,15 @@ footer {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    /* 150% */
 }
-
 .links__container {
     display: flex;
     align-items: flex-start;
     gap: 5em;
 }
-
 footer {
     width: 100%;
 }
-
 .content__container {
     display: flex;
     padding: 44px 80px 56px 80px;
@@ -129,12 +115,10 @@ footer {
     align-self: stretch;
     background: var(--neutural-dark, #1D212E);
 }
-
 .links_columns__container {
     display: flex;
     flex-direction: column;
 }
-
 .links_columns_header {
     width: 140px;
     color: var(--neutural-grey-2, #5B5C61);
@@ -147,7 +131,6 @@ footer {
     /* 150% */
     margin-bottom: 1em;
 }
-
 .links_columns_content {
     display: flex;
     flex-direction: column;
@@ -160,34 +143,35 @@ footer {
     line-height: 24px;
     /* 150% */
 }
-
 .links_icons_container {
     margin-top: 1em;
 }
-
 .links_icons_container svg {
     width: 24px;
     height: 24px;
     margin: 0.5em;
 }
-
-.slider_cont {
-    margin-top: 3vh;
-    margin-bottom: 3vh;
-}
-
 .swiper {
     width: 600px;
     height: 300px;
     --swiper-navigation-color: #5a5a5a;
 }
-
 .swiper-slide {
     width: 100%;
     height: 100%;
 }
-
 .swiper-slide img {
     width: 100%;
     height: 100%;
+}
+.main_container_artistas {
+    display: flex;
+    padding: 80px 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    border-radius: 40px;
+    background: radial-gradient(350.94% 343.49% at 51.82% -159.87%, #404657 0%, rgba(64, 70, 87, 0.00) 100%);
+    backdrop-filter: blur(34px);
 }
